[package]
name = "solbill"
version = "0.1.0"
description = "Autonomous subscription billing engine on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solbill"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
litesvm = "0.7.1"
solana-sdk = "2.2"
spl-token = "7.0"


